--- a/_includes/site-header.html
+++ b/_includes/site-header.html
@@ -1,6 +1,6 @@
-<header class="flex justify-between p-4">
+<header class="flex justify-between p-5">
     
-    <a href="/" class="logo text-5xl"> Logo </a>
+    <a href="/" class="logo text-5xl uppercase font-serif"> Logo </a>
     
     <nav class="flex items-center md:justify-center md:overflow-x-auto overflow-x-scroll md:flex-wrap flex-nowrap uppercase">
       <a href="/blog.html" class="p-4"> Blog </a>
