--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,13 +2,18 @@
 layout: default
 ---
 
+<!--------Header Banner----------->
+
+{% include header-banner.html %}
+
 <!--------This is the first intro section----------->
 
-<section class="p-8">
-    <h1> {{page.title}} </h1>
-    <p> By {{page.author}} </p>
+<section class="grid grid-cols-3 p-5p justify-center text-center">
+    <p> by {{page.author}} </p>
+    <h1 class="text-4xl"> {{page.title}} </h1>
+    <p> {{ page.date | date_to_string }}  </p>
+    <hr class="border-t-6 border-black max-w-full">
 </section>
-
 
 <!--------This is the main content section----------->
 <section class="p-8">
