--- a/style.css
+++ b/style.css
@@ -38,16 +38,14 @@ div {
 
 body {
     font-weight: 300;
-    font-family: 'Figtree', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     background-color: #d4d1cd;
 }
 
-h1, h2, h3, h4, .logo {
-    font-family: 'Playfair Display', serif;
-}
+
 
 p {
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
 }
 
 
