--- a/_includes/quarter-header-banner.html
+++ b/_includes/quarter-header-banner.html
@@ -4,18 +4,16 @@
     
     <div class="col-span-4 bg-cover p-5p flex {{page.background-position}} {{page.text-position}}" style="background-image:url('{{page.banner-image}}')">
         <div class="-ml-[25%]">
-            <h2 class="text-[10vw] text-white mb-2 max-w-2xl"> {{page.heading}} </h2> 
-            <h3 class="text-2xl text-white max-w-md"> {{page.sub-heading}} </h3> 
+            <h2 class="text-[10vw] max-w-[900px] leading-[.9] text-left text-white mb-3"> {{page.heading}} </h2> 
+            <h3 class="text-3xl max-w-[700px] text-white text-left mb-3 uppercase"> {{page.sub-heading}} </h3> 
 
-        </div> 
-      
-
-        
-       {% if page.banner_url %}
+            {% if page.banner_url %}
 	
-	   <a href="{{banner_url}}" class="text-white text-xl mt-2"> Read more </a> 
+	        <a href="{{banner_url}}" class="text-white text-3xl max-w-[500px] text-left uppercase border-b-2 border-black"> {{page.link-text}} </a> 
 
-        {% endif %}
+            {% endif %}
+
+        </div>
 
     </div> 
 </section> 
