--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -426,6 +426,9 @@ video {
 .col-span-1 {
   grid-column: span 1 / span 1;
 }
+.col-span-4 {
+  grid-column: span 4 / span 4;
+}
 .m-4 {
   margin: 1rem;
 }
@@ -437,8 +440,14 @@ video {
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
 }
+.-ml-\[25\%\] {
+  margin-left: -25%;
+}
 .mb-2 {
   margin-bottom: 0.5rem;
+}
+.mb-3 {
+  margin-bottom: 0.75rem;
 }
 .mb-4 {
   margin-bottom: 1rem;
@@ -500,14 +509,23 @@ video {
 .max-w-2xl {
   max-width: 42rem;
 }
+.max-w-\[500px\] {
+  max-width: 500px;
+}
+.max-w-\[700px\] {
+  max-width: 700px;
+}
+.max-w-\[900px\] {
+  max-width: 900px;
+}
+.max-w-full {
+  max-width: 100%;
+}
 .max-w-md {
   max-width: 28rem;
 }
 .max-w-screen-xl {
   max-width: 1280px;
-}
-.max-w-full {
-  max-width: 100%;
 }
 .shrink-0 {
   flex-shrink: 0;
@@ -524,6 +542,9 @@ video {
 }
 .grid-cols-3 {
   grid-template-columns: repeat(3, minmax(0, 1fr));
+}
+.grid-cols-5 {
+  grid-template-columns: repeat(5, minmax(0, 1fr));
 }
 .flex-nowrap {
   flex-wrap: nowrap;
@@ -556,6 +577,10 @@ video {
 }
 .bg-dark {
   background-color: rgb(63 63 70);;
+}
+.bg-green-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(187 247 208 / var(--tw-bg-opacity));
 }
 .bg-white {
   --tw-bg-opacity: 1;
@@ -592,14 +617,11 @@ video {
 .pr-\[20\%\] {
   padding-right: 20%;
 }
-.pt-2 {
-  padding-top: 0.5rem;
-}
-.pt-5p {
-  padding-top: 5%;
-}
 .pt-3 {
   padding-top: 0.75rem;
+}
+.text-left {
+  text-align: left;
 }
 .text-center {
   text-align: center;
@@ -631,6 +653,9 @@ video {
   font-size: 8rem;
   line-height: 1;
 }
+.text-\[10vw\] {
+  font-size: 10vw;
+}
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.2;
@@ -641,6 +666,9 @@ video {
 }
 .uppercase {
   text-transform: uppercase;
+}
+.leading-\[\.9\] {
+  line-height: .9;
 }
 .tracking-wide {
   letter-spacing: 0.025em;
