--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ body {
     font-weight: 300;
     font-family: 'Montserrat', sans-serif;
     background-color: #d4d1cd;
+    color: #1E1E1E;
 }
 
 
