--- a/_includes/quarter-header-banner.html
+++ b/_includes/quarter-header-banner.html
@@ -1,11 +1,11 @@
 <!--  image banner block  -->
-<section class="bg-green-200 grid grid-cols-5 {{page.banner-height}} {{page.text-color}}">
+<section class="grid grid-cols-5 {{page.banner-height}} {{page.text-color}}">
     <div class="col-span-1"> <!----Intentionally empty-----> </div>
     
     <div class="col-span-4 bg-cover p-5p flex {{page.background-position}} {{page.text-position}}" style="background-image:url('{{page.banner-image}}')">
         <div class="-ml-[25%]">
-            <h2 class="text-[10vw] max-w-[900px] leading-[.9] text-left text-white mb-3"> {{page.heading}} </h2> 
-            <h3 class="text-3xl max-w-[700px] text-white text-left mb-3 uppercase"> {{page.sub-heading}} </h3> 
+            <h2 class="text-[10vw] max-w-[800px] leading-[.9] text-left text-white mb-7 font-serif"> {{page.heading}} </h2> 
+            <h3 class="text-3xl max-w-[500px] text-white text-left mb-3 uppercase"> {{page.sub-heading}} </h3> 
 
             {% if page.banner_url %}
 	
