--- a/_includes/blog-loop-item.html
+++ b/_includes/blog-loop-item.html
@@ -1,10 +1,10 @@
-<div>
+<div class="p-5p">
     <a href="{{ post.url }}">
         <div class="aspect-square relative">
             <img src="{{ post.featured_image }}" alt="" class="absolute w-full h-full inset-0 object-cover">
         </div>
-        <h3> {{ post.title }}</h3>
+        <h3 class="text-3xl py-4"> {{ post.title }}</h3>
         <p> {{ post.description }}</p>
-        <p class="uppercase"> Read more </p>
+        <p class="uppercase font-serif text-2xl"> Read more </p>
     </a>
 </div>
