--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -420,11 +420,20 @@ video {
 .inset-0 {
   inset: 0px;
 }
-.right-\[10vw\] {
-  right: 10vw;
+.left-\[-14rem\] {
+  left: -14rem;
+}
+.left-\[37rem\] {
+  left: 37rem;
 }
 .col-span-1 {
   grid-column: span 1 / span 1;
+}
+.col-span-2 {
+  grid-column: span 2 / span 2;
+}
+.col-span-3 {
+  grid-column: span 3 / span 3;
 }
 .col-span-4 {
   grid-column: span 4 / span 4;
@@ -467,6 +476,9 @@ video {
 .mt-8 {
   margin-top: 2rem;
 }
+.mb-0 {
+  margin-bottom: 0px;
+}
 .block {
   display: block;
 }
@@ -491,11 +503,17 @@ video {
 .h-full {
   height: 100%;
 }
+.min-h-100 {
+  min-height: 100vh;
+}
 .min-h-60 {
   min-height: 60vh;
 }
 .min-h-80 {
   min-height: 80vh;
+}
+.min-h-90 {
+  min-height: 90vh;
 }
 .min-h-\[60\] {
   min-height: 60;
@@ -503,8 +521,14 @@ video {
 .min-h-\[80\] {
   min-height: 80;
 }
+.min-h-50 {
+  min-height: 50vh;
+}
 .w-96 {
   width: 24rem;
+}
+.w-\[30rem\] {
+  width: 30rem;
 }
 .w-full {
   width: 100%;
@@ -517,9 +541,6 @@ video {
 }
 .max-w-\[800px\] {
   max-width: 800px;
-}
-.max-w-full {
-  max-width: 100%;
 }
 .max-w-md {
   max-width: 28rem;
@@ -552,9 +573,6 @@ video {
 .items-center {
   align-items: center;
 }
-.justify-center {
-  justify-content: center;
-}
 .justify-between {
   justify-content: space-between;
 }
@@ -564,8 +582,14 @@ video {
 .border-b-2 {
   border-bottom-width: 2px;
 }
-.border-b-4 {
-  border-bottom-width: 4px;
+.border-b {
+  border-bottom-width: 1px;
+}
+.border-t {
+  border-top-width: 1px;
+}
+.border-t-2 {
+  border-top-width: 2px;
 }
 .border-black {
   --tw-border-opacity: 1;
@@ -578,15 +602,22 @@ video {
 .bg-dark {
   background-color: rgb(63 63 70);;
 }
+.bg-light {
+  background-color: #edeceb;;
+}
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
-.bg-light {
-  background-color: #edeceb;;
+.bg-zinc-900 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(24 24 27 / var(--tw-bg-opacity));
 }
 .bg-cover {
   background-size: cover;
+}
+.bg-bottom {
+  background-position: bottom;
 }
 .bg-center {
   background-position: center;
@@ -594,6 +625,9 @@ video {
 .object-cover {
   -o-object-fit: cover;
      object-fit: cover;
+}
+.p-1 {
+  padding: 0.25rem;
 }
 .p-2 {
   padding: 0.5rem;
@@ -612,6 +646,13 @@ video {
 }
 .p-8 {
   padding: 2rem;
+}
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+.pb-5p {
+  padding-bottom: 5%;
 }
 .pr-\[20\%\] {
   padding-right: 20%;
@@ -655,6 +696,10 @@ video {
 .text-\[10vw\] {
   font-size: 10vw;
 }
+.text-sm {
+  font-size: 0.875rem;;
+  line-height: 1.2;
+}
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.2;
@@ -662,6 +707,9 @@ video {
 .text-xs {
   font-size: 0.75rem;
   line-height: 1.2;
+}
+.font-bold {
+  font-weight: 700;
 }
 .uppercase {
   text-transform: uppercase;
@@ -683,6 +731,7 @@ video {
 /* Custom CSS */
 
 /* ----------- CSS RESET --------- */
+
 
 * {
     padding: 0;
@@ -732,9 +781,40 @@ p {
   text-transform: uppercase;
 }
 
+.blog-content {
+    padding-left: 5%;
+    padding-right: 5%;
+    text-align: center;
+    margin-bottom: 2rem;
+    padding-top: 2%
+}
+
+.blog-content h2 {
+    font-size: 1.5rem;
+    margin-top: 3%;
+    margin-bottom: 3%;
+}
+
+.blog-content img {
+    margin: 0 auto;
+    max-width: 50%;
+}
+
+.blog-content blockquote {
+    font-family: 'Italiana', serif;
+    font-size: 3rem;
+    padding: 5%;
+    text-align: center;
+    margin-right: 20%;
+    margin-left: 20%;
+}
+
 @media (min-width: 768px) {
   .md\:flex {
     display: flex;
+  }
+  .md\:grid {
+    display: grid;
   }
   .md\:columns-3 {
     -moz-columns: 3;
@@ -750,4 +830,3 @@ p {
     overflow-x: auto;
   }
 }
-
