--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@
 
 /* ----------- CSS RESET --------- */
 
+
 * {
     padding: 0;
     margin: 0;
@@ -57,3 +58,30 @@ p {
     @apply border p-4 uppercase;
 }
 
+.blog-content {
+    padding-left: 5%;
+    padding-right: 5%;
+    text-align: center;
+    margin-bottom: 2rem;
+    padding-top: 2%
+}
+
+.blog-content h2 {
+    font-size: 1.5rem;
+    margin-top: 3%;
+    margin-bottom: 3%;
+}
+
+.blog-content img {
+    margin: 0 auto;
+    max-width: 50%;
+}
+
+.blog-content blockquote {
+    font-family: 'Italiana', serif;
+    font-size: 3rem;
+    padding: 5%;
+    text-align: center;
+    margin-right: 20%;
+    margin-left: 20%;
+}
