--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -29,7 +29,7 @@ layout: default
     {{ content }}
 </section>
 
-<!--------This is a placeholder section to later add the related posts----------->
+<!--------Related posts----------->
 
 <section class="p-5p">
     <h3 class="uppercase text-4xl text-center pb-5p"> Check out related blogs </h3>
