--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,5 +16,8 @@
 
 	{% include site-footer.html %} 
 
+
+    <script src="https://unpkg.com/gsap@3.12.1/dist/gsap.min.js"></script>
+    <script src="/main.js"></script>
 </body>
 </html>
