--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -411,6 +411,9 @@ video {
   --tw-backdrop-saturate:  ;
   --tw-backdrop-sepia:  ;
 }
+.pointer-events-none {
+  pointer-events: none;
+}
 .absolute {
   position: absolute;
 }
@@ -524,6 +527,9 @@ video {
 .min-h-\[80\] {
   min-height: 80;
 }
+.w-1\/2 {
+  width: 50%;
+}
 .w-96 {
   width: 24rem;
 }
@@ -588,11 +594,17 @@ video {
 .gap-4 {
   gap: 1rem;
 }
+.overflow-hidden {
+  overflow: hidden;
+}
 .overflow-x-scroll {
   overflow-x: scroll;
 }
-.border {
-  border-width: 1px;
+.rounded {
+  border-radius: 0.25rem;
+}
+.rounded-lg {
+  border-radius: 0.5rem;
 }
 .border-b-2 {
   border-bottom-width: 2px;
@@ -631,6 +643,9 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(24 24 27 / var(--tw-bg-opacity));
 }
+.bg-\[length\:50vw\] {
+  background-size: 50vw;
+}
 .bg-cover {
   background-size: cover;
 }
@@ -640,9 +655,16 @@ video {
 .bg-center {
   background-position: center;
 }
+.bg-left {
+  background-position: left;
+}
 .object-cover {
   -o-object-fit: cover;
      object-fit: cover;
+}
+.object-center {
+  -o-object-position: center;
+     object-position: center;
 }
 .p-1 {
   padding: 0.25rem;
