--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,11 +15,11 @@ layout: default
     </div>
 
     <div class="col-span-3 text-4xl">
-    <h1> {{page.title}} </h1>
+        <h1> {{page.title}} </h1>
     </div>
 
-    <div class="col-span-1"></div>
-    <p> {{ page.date | date_to_string }}  </p>
+    <div class="col-span-1">
+        <p> {{ page.date | date_to_string }}  </p>
     </div>
     
 </section>
