--- a/_includes/header-banner.html
+++ b/_includes/header-banner.html
@@ -1,7 +1,7 @@
 <!--  image banner block  -->
 <section class="p-5p bg-cover {{page.background-position}} {{page.banner-height}} {{page.text-position}} {{page.text-color}} flex items-center" style="background-image: url('{{page.banner-image}}')">
     <div> 
-       <h2 class="text-[10vw] font-light mb-12 leading-[0.9]"> {{page.heading}} </h2> 
+       <h2 class="text-[10vw] font-light mb-12 mr-24 leading-[0.9] font-serif"> {{page.heading}} </h2> 
        <h3 class="text-2xl uppercase font-light max-w-md"> {{page.sub-heading}} </h3> 
         
        {% if page.banner_url %}
