--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -476,6 +476,9 @@ video {
 .mr-2 {
   margin-right: 0.5rem;
 }
+.mr-40 {
+  margin-right: 10rem;
+}
 .mt-1 {
   margin-top: 0.25rem;
 }
@@ -484,6 +487,9 @@ video {
 }
 .mt-8 {
   margin-top: 2rem;
+}
+.mr-24 {
+  margin-right: 6rem;
 }
 .block {
   display: block;
@@ -556,6 +562,9 @@ video {
 }
 .shrink-0 {
   flex-shrink: 0;
+}
+.list-inside {
+  list-style-position: inside;
 }
 .list-disc {
   list-style-type: disc;
@@ -731,6 +740,9 @@ video {
 }
 .pt-\[50\%\] {
   padding-top: 50%;
+}
+.pb-0 {
+  padding-bottom: 0px;
 }
 .text-left {
   text-align: left;
