--- a/_includes/site-header.html
+++ b/_includes/site-header.html
@@ -7,8 +7,8 @@
 
 <!-- we can apply these typography styles on the parent since they are inheritable styles -->    
     <nav class="md:justify-center md:overflow-x-auto overflow-x-scroll md:flex-wrap flex-nowrap uppercase font-serif">
-      <a href="/blog.html" class="p-4"> Blog </a>
-      <a href="#" class="p-4"> Shop </a>
+      <a href="/blog" class="p-4"> Blog </a>
+      <a href="/shop" class="p-4"> Shop </a>
       <a href="#" class="p-4"> Members login </a>
     </nav>
 
