--- a/_layouts/products-presets.html
+++ b/_layouts/products-presets.html
@@ -80,6 +80,18 @@ layout: default
 
 <!--------------FAQ's Section------------------>
 
+<section class="p-5p bg-stone-200">
+    
+    <h3 class="uppercase font-serif text-5xl text center"> Faq's </h3>
+
+    <div class="max-w-screen-xl mx-auto">
+
+        {% include accordion.html  accordion-source=site.data.presets-settings.faqs %}
+
+    </div>
+</section>
+
+<!------
 <section class="p-5p pb-0">
 
     <h3 class="uppercase font-serif text-5xl text center py-3"> Faq's </h3>
@@ -103,6 +115,7 @@ layout: default
     </div>
   
 </section>
+------>
 
 <!--------------Related Products------------------>
 
