--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,7 @@
 
 
     <script src="https://unpkg.com/gsap@3.12.1/dist/gsap.min.js"></script>
+    <script src="//unpkg.com/alpinejs" defer></script>
     <script src="/main.js"></script>
 </body>
 </html>
