--- a/_includes/upcoming-travel.html
+++ b/_includes/upcoming-travel.html
@@ -5,22 +5,27 @@
     </div>
 
     <div class="col-span-1 p-5p flex items-center ">
-      <div> 
+      <div class="flex-grow"> 
 
-        <p class="uppercase border-b-2 border-t-2 border-black py-4 mb-0"> Europe </p>
+        {% for item in site.data.upcoming-trips.trips %}
 
-        <p class="uppercase border-b-2 border-black py-4 mb-0"> Australia </p>
+        <div class="flex justify-between items-center border-b-2 first:border-t-2 border-black">
+        <p class="uppercase  py-4 mb-0"> {{item.title}} </p>
+        <span> {{item.description}} </span>
+        </div>
 
-        <p class="uppercase border-b-2 border-black py-4 mb-0"> Asia </p>
-
-        <p class="uppercase border-b-2 border-black py-4 mb-0"> Africa </p>
+        {% endfor %}
   
-        <h2 class="text-6xl bg-[#d4d1cd] relative w-[30rem] left-[37rem] p-8 text-center my-2 font-serif"> Currently in... </h2>
+    
         
       </div>
     
     </div>
 
-    <div style="background-image: url('/images/blog-bg-14.jpg')" class="col-span-1 min-h-50"> </div>
+    <div style="background-image: url('/images/blog-bg-14.jpg')" class="col-span-1 min-h-50 relative">
+    
+      <h2 class="text-6xl bg-[#d4d1cd] absolute bottom-8 inline-block p-8 text-center my-2 font-serif "> Currently in... </h2>
+
+    </div>
   
   </section>
