--- a/_layouts/products-guides.html
+++ b/_layouts/products-guides.html
@@ -57,7 +57,7 @@ layout: default
         
             <div class="max-w-screen-xl mx-auto">
         
-                {% include accordion.html  accordion-source=site.data.guides-settings.contents %}
+                {% include accordion.html  accordion-source=site.data.upcoming-trips.trips %}
         
             </div>
         
