--- a/_includes/header-banner.html
+++ b/_includes/header-banner.html
@@ -1,6 +1,13 @@
 <!--  image banner block  -->
 <section class="p-5p bg-cover {{page.background-position}} {{page.banner-height}} {{page.text-position}} {{page.text-color}} flex items-center" style="background-image: url('{{page.banner-image}}')">
     <div> 
+       
+       {% if page.pre-heading %}
+	
+       <h4 class="text-2xl uppercase font-light max-w-md text-white"> {{page.pre-heading}} </h4> 
+ 
+       {% endif %}
+       
        <h2 class="text-[10vw] font-light mb-12 mr-24 leading-[0.9] font-serif text-white"> {{page.heading}} </h2> 
        <h3 class="text-2xl uppercase font-light max-w-md text-white"> {{page.sub-heading}} </h3> 
         
@@ -8,7 +15,7 @@
 	
 	   <a href="{{banner_url}}" class="text-white text-xl mt-2"> Read more </a> 
 
-        {% endif %}
+       {% endif %}
 
     </div> 
 </section> 
