--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -451,8 +451,8 @@ video {
 .inset-0 {
   inset: 0px;
 }
-.left-\[37rem\] {
-  left: 37rem;
+.bottom-8 {
+  bottom: 2rem;
 }
 .col-span-1 {
   grid-column: span 1 / span 1;
@@ -491,9 +491,6 @@ video {
 }
 .mb-2 {
   margin-bottom: 0.5rem;
-}
-.mb-3 {
-  margin-bottom: 0.75rem;
 }
 .mb-4 {
   margin-bottom: 1rem;
@@ -573,9 +570,6 @@ video {
 .w-96 {
   width: 24rem;
 }
-.w-\[30rem\] {
-  width: 30rem;
-}
 .w-full {
   width: 100%;
 }
@@ -596,6 +590,9 @@ video {
 }
 .shrink-0 {
   flex-shrink: 0;
+}
+.flex-grow {
+  flex-grow: 1;
 }
 .list-inside {
   list-style-position: inside;
@@ -655,9 +652,6 @@ video {
 .border-t {
   border-top-width: 1px;
 }
-.border-t-2 {
-  border-top-width: 2px;
-}
 .border-black {
   --tw-border-opacity: 1;
   border-color: rgb(0 0 0 / var(--tw-border-opacity));
@@ -669,6 +663,10 @@ video {
 .bg-\[\#d4d1cd\] {
   --tw-bg-opacity: 1;
   background-color: rgb(212 209 205 / var(--tw-bg-opacity));
+}
+.bg-\[\#e5e2de\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 226 222 / var(--tw-bg-opacity));
 }
 .bg-black {
   --tw-bg-opacity: 1;
@@ -689,9 +687,9 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
-.bg-zinc-900 {
+.bg-zinc-800 {
   --tw-bg-opacity: 1;
-  background-color: rgb(24 24 27 / var(--tw-bg-opacity));
+  background-color: rgb(39 39 42 / var(--tw-bg-opacity));
 }
 .bg-\[length\:50vw\] {
   background-size: 50vw;
@@ -949,6 +947,10 @@ p {
     text-align: center;
     margin-right: 20%;
     margin-left: 20%;
+}
+
+.first\:border-t-2:first-child {
+  border-top-width: 2px;
 }
 
 @media (min-width: 768px) {
