--- a/_layouts/products-guides.html
+++ b/_layouts/products-guides.html
@@ -65,8 +65,8 @@ layout: default
 
     <div class="col-span-2">
 
-            <div>
-                <h3 class="uppercase font-serif text-4xl mr-40 uppercase"> What's included </h3>
+            <div class="ml-40">
+                <h3 class="font-serif text-4xl uppercase"> What's included </h3>
                 <ul class="list-disc py-3 list-inside">
                     <li> Lorem ipsum dolor sit </li>
                     <li> Lorem ipsum dolor sit </li>
