--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -498,6 +498,9 @@ video {
 .mb-7 {
   margin-bottom: 1.75rem;
 }
+.ml-40 {
+  margin-left: 10rem;
+}
 .mr-2 {
   margin-right: 0.5rem;
 }
@@ -674,10 +677,6 @@ video {
 }
 .bg-dark {
   background-color: rgb(63 63 70);;
-}
-.bg-stone-100 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(245 245 244 / var(--tw-bg-opacity));
 }
 .bg-stone-200 {
   --tw-bg-opacity: 1;
