--- a/_includes/site-header.html
+++ b/_includes/site-header.html
@@ -9,7 +9,7 @@
     <nav class="md:justify-center md:overflow-x-auto overflow-x-scroll md:flex-wrap flex-nowrap uppercase font-serif">
       <a href="/blog" class="p-4"> Blog </a>
       <a href="/shop" class="p-4"> Shop </a>
-      <a href="#" class="p-4"> Members login </a>
+      <a href="/members-login" class="p-4"> Members login </a>
     </nav>
 
 </header>
