--- a/_includes/upcoming-travel.html
+++ b/_includes/upcoming-travel.html
@@ -1,7 +1,7 @@
 <section class="grid grid-cols-2 p-5p">
 
     <div class="col-span-2 text-center pb-5p">
-    <h3 class="uppercase font-serif text-5xl"> Upcoming travel destinations </h3>
+    <h3 class="uppercase font-serif text-3xl md:text-5xl"> Upcoming travel destinations </h3>
     </div>
 
     <div class="col-span-1 p-5p flex items-center ">
