--- a/_includes/header-banner.html
+++ b/_includes/header-banner.html
@@ -9,7 +9,7 @@
        {% endif %}
        
        <h2 class="text-[10vw] font-light mb-12 mr-24 leading-[0.9] font-serif text-white"> {{page.heading}} </h2> 
-       <h3 class="text-2xl uppercase font-light max-w-md text-white"> {{page.sub-heading}} </h3> 
+       <h3 class="text-sm md:text-2xl uppercase font-light max-w-md text-white"> {{page.sub-heading}} </h3> 
         
        {% if page.banner_url %}
 	
