--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -454,6 +454,9 @@ video {
 .bottom-8 {
   bottom: 2rem;
 }
+.left-0 {
+  left: 0px;
+}
 .col-span-1 {
   grid-column: span 1 / span 1;
 }
@@ -468,6 +471,10 @@ video {
 }
 .m-4 {
   margin: 1rem;
+}
+.mx-\[9\%\] {
+  margin-left: 9%;
+  margin-right: 9%;
 }
 .mx-auto {
   margin-left: auto;
@@ -534,6 +541,9 @@ video {
 .contents {
   display: contents;
 }
+.hidden {
+  display: none;
+}
 .aspect-landscape {
   aspect-ratio: 3 / 2;
 }
@@ -542,6 +552,9 @@ video {
 }
 .aspect-square {
   aspect-ratio: 1 / 1;
+}
+.h-5 {
+  height: 1.25rem;
 }
 .h-full {
   height: 100%;
@@ -569,6 +582,12 @@ video {
 }
 .w-1\/2 {
   width: 50%;
+}
+.w-40 {
+  width: 10rem;
+}
+.w-5 {
+  width: 1.25rem;
 }
 .w-96 {
   width: 24rem;
@@ -616,6 +635,9 @@ video {
 .grid-cols-3 {
   grid-template-columns: repeat(3, minmax(0, 1fr));
 }
+.grid-cols-4 {
+  grid-template-columns: repeat(4, minmax(0, 1fr));
+}
 .grid-cols-5 {
   grid-template-columns: repeat(5, minmax(0, 1fr));
 }
@@ -627,6 +649,9 @@ video {
 }
 .items-center {
   align-items: center;
+}
+.justify-center {
+  justify-content: center;
 }
 .justify-between {
   justify-content: space-between;
@@ -645,6 +670,9 @@ video {
 }
 .rounded-lg {
   border-radius: 0.5rem;
+}
+.rounded-md {
+  border-radius: 0.375rem;
 }
 .border {
   border-width: 1px;
@@ -738,6 +766,14 @@ video {
   padding-left: 10%;
   padding-right: 10%;
 }
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
 .px-5p {
   padding-left: 5%;
   padding-right: 5%;
@@ -749,6 +785,14 @@ video {
 .py-15p {
   padding-top: 15%;
   padding-bottom: 15%;
+}
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+.py-2\.5 {
+  padding-top: 0.625rem;
+  padding-bottom: 0.625rem;
 }
 .py-3 {
   padding-top: 0.75rem;
@@ -850,12 +894,30 @@ video {
 .tracking-wide {
   letter-spacing: 0.025em;
 }
+.text-gray-400 {
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity));
+}
 .text-light {
   color: #edeceb;;
+}
+.text-red-600 {
+  --tw-text-opacity: 1;
+  color: rgb(220 38 38 / var(--tw-text-opacity));
 }
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+.shadow {
+  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.shadow-md {
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 .transition-all {
   transition-property: all;
@@ -951,6 +1013,35 @@ p {
   border-top-width: 2px;
 }
 
+.first-of-type\:rounded-t-md:first-of-type {
+  border-top-left-radius: 0.375rem;
+  border-top-right-radius: 0.375rem;
+}
+
+.last-of-type\:rounded-b-md:last-of-type {
+  border-bottom-right-radius: 0.375rem;
+  border-bottom-left-radius: 0.375rem;
+}
+
+.hover\:bg-gray-50:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 250 251 / var(--tw-bg-opacity));
+}
+
+.disabled\:text-gray-500:disabled {
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity));
+}
+
+@media (min-width: 640px) {
+  .sm\:flex {
+    display: flex;
+  }
+  .sm\:hidden {
+    display: none;
+  }
+}
+
 @media (min-width: 768px) {
   .md\:flex {
     display: flex;
@@ -958,9 +1049,15 @@ p {
   .md\:grid {
     display: grid;
   }
+  .md\:min-h-80 {
+    min-height: 80vh;
+  }
   .md\:columns-3 {
     -moz-columns: 3;
          columns: 3;
+  }
+  .md\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
   .md\:flex-wrap {
     flex-wrap: wrap;
@@ -970,5 +1067,16 @@ p {
   }
   .md\:overflow-x-auto {
     overflow-x: auto;
+  }
+  .md\:text-left {
+    text-align: left;
+  }
+  .md\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 1.2;
+  }
+  .md\:text-5xl {
+    font-size: 3rem;
+    line-height: 1;
   }
 }
