--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -484,6 +484,10 @@ video {
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
 }
+.my-px {
+  margin-top: 1px;
+  margin-bottom: 1px;
+}
 .-ml-\[20\%\] {
   margin-left: -20%;
 }
@@ -525,6 +529,9 @@ video {
 }
 .mt-8 {
   margin-top: 2rem;
+}
+.mb-px {
+  margin-bottom: 1px;
 }
 .block {
   display: block;
@@ -686,9 +693,16 @@ video {
 .border-t {
   border-top-width: 1px;
 }
+.border-r-2 {
+  border-right-width: 2px;
+}
 .border-black {
   --tw-border-opacity: 1;
   border-color: rgb(0 0 0 / var(--tw-border-opacity));
+}
+.border-white {
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 .border-zinc-800 {
   --tw-border-opacity: 1;
