--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -472,10 +472,6 @@ video {
 .m-4 {
   margin: 1rem;
 }
-.mx-\[9\%\] {
-  margin-left: 9%;
-  margin-right: 9%;
-}
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -483,10 +479,6 @@ video {
 .my-2 {
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
-}
-.my-px {
-  margin-top: 1px;
-  margin-bottom: 1px;
 }
 .-ml-\[20\%\] {
   margin-left: -20%;
@@ -509,6 +501,9 @@ video {
 .mb-7 {
   margin-bottom: 1.75rem;
 }
+.mb-px {
+  margin-bottom: 1px;
+}
 .ml-40 {
   margin-left: 10rem;
 }
@@ -529,9 +524,6 @@ video {
 }
 .mt-8 {
   margin-top: 2rem;
-}
-.mb-px {
-  margin-bottom: 1px;
 }
 .block {
   display: block;
@@ -690,11 +682,11 @@ video {
 .border-b-2 {
   border-bottom-width: 2px;
 }
-.border-t {
-  border-top-width: 1px;
-}
 .border-r-2 {
   border-right-width: 2px;
+}
+.border-t {
+  border-top-width: 1px;
 }
 .border-black {
   --tw-border-opacity: 1;
@@ -730,6 +722,9 @@ video {
 .bg-zinc-800 {
   --tw-bg-opacity: 1;
   background-color: rgb(39 39 42 / var(--tw-bg-opacity));
+}
+.bg-\[url\(\'\'\)\] {
+  background-image: url('');
 }
 .bg-\[length\:50vw\] {
   background-size: 50vw;
@@ -941,8 +936,23 @@ video {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
+.transition-opacity {
+  transition-property: opacity;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+.transition {
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
 .duration-700 {
   transition-duration: 700ms;
+}
+.duration-500 {
+  transition-duration: 500ms;
 }
 
 /* Custom CSS */
@@ -1043,6 +1053,10 @@ p {
 .hover\:bg-gray-50:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(249 250 251 / var(--tw-bg-opacity));
+}
+
+.hover\:opacity-0:hover {
+  opacity: 0;
 }
 
 .disabled\:text-gray-500:disabled {
