--- a/assets/css/output-style.css
+++ b/assets/css/output-style.css
@@ -480,6 +480,10 @@ video {
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
 }
+.my-4 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
 .-ml-\[20\%\] {
   margin-left: -20%;
 }
@@ -500,6 +504,9 @@ video {
 }
 .mb-7 {
   margin-bottom: 1.75rem;
+}
+.mb-8 {
+  margin-bottom: 2rem;
 }
 .mb-px {
   margin-bottom: 1px;
@@ -603,6 +610,9 @@ video {
 .max-w-md {
   max-width: 28rem;
 }
+.max-w-screen-lg {
+  max-width: 1024px;
+}
 .max-w-screen-xl {
   max-width: 1280px;
 }
@@ -657,6 +667,9 @@ video {
 }
 .gap-2 {
   gap: 0.5rem;
+}
+.gap-4 {
+  gap: 1rem;
 }
 .overflow-hidden {
   overflow: hidden;
@@ -928,6 +941,9 @@ video {
   --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
+.filter {
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
 .transition-all {
   transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -1024,6 +1040,10 @@ p {
     text-align: center;
     margin-right: 20%;
     margin-left: 20%;
+}
+
+.filter .active {
+  font-weight: 700;
 }
 
 .first\:border-t-2:first-child {
