--- a/_includes/site-footer.html
+++ b/_includes/site-footer.html
@@ -2,21 +2,27 @@
     <div class="max-w-screen-xl mx-auto md:grid grid-cols-3">
         <div class="p-4">
           <a href="#" class="font-serif uppercase text-4xl mb-4 block"> Logo </a>
-          <p> Lorem ipsum dolor sit amet consectetur adipisicing elit sint dignissimos magni vitae. </p>
+          <div>  
+            <p class="editable"> Lorem ipsum dolor sit amet consectetur adipisicing elit sint dignissimos magni vitae. </p>
+          </div>
         </div> 
         <nav class="p-4">
-          <h2 class="p-1 font-bold tracking-wide uppercase"> Find out more </h2>
-          <a href="/blog-archive-list" class="p-1 block uppercase text-sm tracking-wide"> Blog Archive List </a>
-          <a href="/blog-archive" class="p-1 block uppercase text-sm tracking-wide"> Blog Archive </a>
-          <a href="#" class="p-1 block uppercase text-sm tracking-wide"> Link Three </a>
-          <a href="#" class="p-1 block uppercase text-sm tracking-wide"> Link Four </a>
+          <div class="editable">
+            <h2 class="p-1 font-bold tracking-wide uppercase"> Find out more </h2>
+          </div>
+          <a href="/blog-archive-list" class="editable p-1 block uppercase text-sm tracking-wide"> Blog Archive List </a>
+          <a href="/blog-archive" class="editable p-1 block uppercase text-sm tracking-wide"> Blog Archive </a>
+          <a href="#" class="editable p-1 block uppercase text-sm tracking-wide"> Link Three </a>
+          <a href="#" class="editable p-1 block uppercase text-sm tracking-wide"> Link Four </a>
         </nav> 
         <nav class="p-4">
-          <h2 class="p-1 font-bold tracking-wide uppercase"> Get in touch </h2>
-          <a href="#" class="p-1 block uppercase text-sm tracking-wide"> Instagram</a>
-          <a href="#" class="p-1 block uppercase text-sm tracking-wide"> Facebook </a>
-          <a href="#" class="p-1 block uppercase text-sm tracking-wide"> LinkedIn </a>
-          <a href="#" class="p-1 block uppercase text-sm tracking-wide"> TikTok </a>
+          <div class="editable">
+            <h2 class="p-1 font-bold tracking-wide uppercase"> Get in touch </h2>
+          </div>
+          <a href="#" class="editable p-1 block uppercase text-sm tracking-wide"> Instagram</a>
+          <a href="#" class="editable p-1 block uppercase text-sm tracking-wide"> Facebook </a>
+          <a href="#" class="editable p-1 block uppercase text-sm tracking-wide"> LinkedIn </a>
+          <a href="#" class="editable p-1 block uppercase text-sm tracking-wide"> TikTok </a>
         </nav> 
       </div>
     </footer>
